# fod

./: .gitignore  .statfs-fix-trigger  .statfs-run-trigger  .statfs-workflow-merge-trigger  BENCHMARKS.md  CLA.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  Makefile  README.md  README.pl  ROADMAP.md  TODO.md  admpanch_trace.fod.db.ini  admpanch_trace.fod.local.ini  commands.md  conclusions.md  docker-compose.selinux-acl.yml  docker-compose.yml  fod_backend.py  fod_config.example.ini  fod_config.ini  fod_identity.py  fod_time.py  mount.fod  requirements-test.txt  zasady_sprawdzen.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: .pg-endpoint-phase-1-validation  LOCAL_TEST_DATA_PRIVACY.md  compatibility-contracts.md  fod-indexer-read-api.md  fod-indexer.md  fuse-abi-7-31-current-baseline.md  fuse-protocol-7-32-7-40-capabilities.md  fuser-0-17-migration-baseline.md  indexer-catalog-snapshot-regression-plan.md  msfind-fod-indexer-requests.md  performance-baselines.md  performance-data-blocks-conflict-noop-profile-2026-07-03.md  performance-data-blocks-conflict-profile-2026-07-03.md  performance-data-blocks-dml-profile-2026-07-03.md  performance-data-blocks-profile-2026-07-01.md  performance-data-blocks-swap-profile-2026-07-03.md  performance-data-blocks-swap-repeat-profile-2026-07-04.md  performance-profile-io-visibility-2026-07-01.md  performance.md  pg-endpoint-probe-anchor-report.txt  pg-endpoint-probe-fixer-trigger.txt  pg-endpoint-probe-pr-trigger.txt  pg-endpoint-probe-pr.md  pg-endpoint-probe-pr2.md  pg-endpoint-probe-pr3.md  pg-endpoint-probe-push-trigger.txt  pg-endpoint-probe-tail-report.txt  postgresql-multi-endpoint-phase-1-scope.md  postgresql-multi-endpoint-phase-1-test-plan.md  postgresql-multi-endpoint-phase-1.md  postgresql-multi-endpoint-phase-2.md  postgresql-multi-endpoint-phase-3.md  postgresql-multi-endpoint-phase-4.md  space-accounting.md  (+5 more)
rust_fuse/: Cargo.toml  build.rs
rust_fuse/.cargo/: config.toml
rust_fuse/pkgconfig/: fuse3.pc
rust_fuse/src/: compatibility.rs  copy_plan.rs  fs.rs  main.rs  pg_lanes.rs  read_cache.rs  startup.rs  write_buffer.rs  write_payload.rs
rust_fuse/tests/: data_blocks_conflict_benchmark.rs  large_copy_benchmark.rs  large_file_multiblock_benchmark.rs  lock_backend_smoke.rs  mount_smoke.rs  pg_lanes_mount.rs  profile_smoke.rs  remount_durability_benchmark.rs  root_permissions_smoke.rs  support.rs
rust_indexer/: Cargo.toml
rust_indexer/src/: capabilities.rs  clean.rs  cleanup.rs  cli.rs  config.rs  db.rs  duplicate_set_api.rs  file_read_api.rs  hash.rs  main.rs  materialize.rs  model.rs  output.rs  plan.rs  progress.rs  read_api.rs  replay.rs  scan.rs  snapshot_api.rs  source.rs  source_registry.rs
rust_mkfs/: Cargo.toml
rust_mkfs/src/: config.rs  main.rs  pg.rs  pg_config.rs  runtime.rs  schema_admin.rs  tls.rs  version.rs
rust_mkfs/tests/: fod_config.rs  fod_pg_endpoints.rs  schema_upgrade.rs
(+175 files in other folders)
