[workspace]
members = [
    "rust_runtime",
    "rust_hotpath",
    "rust_mkfs",
    "rust_fuse",
    "rust_indexer",
]
resolver = "2"

[workspace.package]
version = "3.2.24"
rust-version = "1.85"

[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
