[package]
name = "fod-rust-fuse"
version.workspace = true
rust-version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
fuser = { version = "0.14", features = ["abi-7-31"] }
libc = "0.2"
env_logger = "0.11"
log = "0.4"
linked-hash-map = "0.5"
rust_hotpath = { package = "fod-rust-hotpath", path = "../rust_hotpath" }
fod_rust_runtime = { package = "fod-rust-runtime", path = "../rust_runtime" }
