[package]
name = "fod-rust-mkfs"
version.workspace = true
rust-version.workspace = true
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
libc = "0.2"
pbkdf2 = "0.12"
rand = "0.8"
serde_json = "1"
sha2 = "0.10"
fod_rust_runtime = { package = "fod-rust-runtime", path = "../rust_runtime" }
